--- a/common.css
+++ b/common.css
@@ -258,3 +258,13 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
+#loading-spinner {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
