--- a/common.css
+++ b/common.css
@@ -40,15 +40,24 @@ html {
     font-size: 20px;
 }
 
-/* Main navigation */
 .main-nav {
     position: absolute;
+    background-color: transparent;
     width: 100%;
     top: 5%;
     text-transform: uppercase;
     font-size: 1.2em;
     display: flex;
     justify-content: center;
+    transition: background-color 0.3s ease;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 30px;
 }
 
 .main-nav ul {
@@ -257,14 +266,4 @@ footer {
     color: #000;
     text-align: center;
     padding: 10px;
-}
-
-#loading-spinner {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
 }
