--- a/common.css
+++ b/common.css
@@ -1,14 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+/* common.css */
 body {
     background-color: #161b22;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    height: 100%;
 }
+
+.loader {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    background-color: #f8f8f8;
+    position: fixed;
+    /* Ensure it stays in place */
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    /* Ensure it is on top of other elements */
+}
+
+.loader img {
+    width: 340px;
+    /* Adjust this value to make the spinner smaller */
+    height: 300px;
+    /* Maintain aspect ratio if needed */
+}
+
+.content {
+    display: none;
+}
+
+/* Your existing CSS continues here */
 
 /* Top bar */
 .top-bar {
