--- a/CSSs/contact.css
+++ b/CSSs/contact.css
@@ -1,7 +1,7 @@
 @import url('common.css');
 
 header {
-    background: url('images/star and pine and shine.jpeg') no-repeat center center/cover;
+    background: url('../images/star and pine and shine.jpeg') no-repeat center center/cover;
 }
 
 .form-section {
