--- a/CSSs/index.css
+++ b/CSSs/index.css
@@ -1,7 +1,7 @@
 @import url('common.css');
 
 header {
-    background: url('images/nature.jpg') no-repeat center center/cover;
+    background: url('../images/nature.jpg') no-repeat center center/cover;
 }
 
 .profile-pic {
