--- a/CSSs/common.css
+++ b/CSSs/common.css
@@ -15,6 +15,17 @@ html {
     height: 100%;
 }
 
+.email-link {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.email-link:hover {
+    color: #ade1fb;
+    text-decoration: none;
+}
+
 .loader {
     height: 100vh;
     width: 100vw;
