--- a/CSSs/common.css
+++ b/CSSs/common.css
@@ -95,6 +95,7 @@ html {
     display: flex;
     justify-content: center;
     transition: background-color 0.3s ease;
+    z-index: 1000;
 }
 
 .sticky {
@@ -103,6 +104,33 @@ html {
     left: 0;
     right: 0;
     padding: 30px;
+    background-color: rgba(0, 0, 0, 1);
+    transition: background-color 0.3s ease;
+}
+
+.scroll-to-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: white;
+    color: #555;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    font-size: 24px;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s ease;
+}
+
+.scroll-to-top:hover {
+    background-color: #ddd;
 }
 
 .main-nav ul {
@@ -192,31 +220,6 @@ button {
 
 button:hover {
     background-color: rgba(128, 128, 128, 0.645);
-}
-
-/* Scroll to top button */
-.scroll-to-top {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: white;
-    color: #555;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-    font-size: 24px;
-    justify-content: center;
-    align-items: center;
-}
-
-.scroll-to-top:hover {
-    background-color: #ddd;
 }
 
 /* Footer */
